Correcting z-index issue on header

--- a/assets/css/3-sections/header.sass
+++ b/assets/css/3-sections/header.sass
@@ -1,7 +1,6 @@
 .home-wrap
   header
     width: 136px
-    background: white
     padding: 30px 0
     z-index: 50
 
