--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -924,7 +924,6 @@ body {
 
 .home-wrap header {
   width: 136px;
-  background: white;
   padding: 30px 0;
   z-index: 50; }
   .home-wrap header .header-position {
